syntax = "proto3";
package generated;
option go_package = "github.com/vmware-tanzu/velero/pkg/plugin/generated";

import "Shared.proto";

message DeleteItemActionExecuteRequest {
    string plugin = 1;
    bytes item = 2;
    bytes backup = 3;
}

service DeleteItemAction {
    rpc AppliesTo(DeleteItemActionAppliesToRequest) returns (DeleteItemActionAppliesToResponse);
    rpc Execute(DeleteItemActionExecuteRequest) returns (Empty);
}

message DeleteItemActionAppliesToRequest {
    string plugin = 1;
}

message DeleteItemActionAppliesToResponse {
    ResourceSelector ResourceSelector = 1;
}
